ready for supervision