@@ -9,6 +9,7 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.refEq;
@@ -22,7 +23,7 @@ public class AccountServiceShould {
     private static final int POSITIVE_AMOUNT = 100;
     private static final int NEGATIVE_AMOUNT = -POSITIVE_AMOUNT;
     private static final LocalDate TODAY = LocalDate.of(2017, 9, 6);
-    private static final List<Transaction> TRANSACTIONS = List.of(
+    private static final List<Transaction> TRANSACTIONS = Arrays.asList(
             new Transaction(LocalDate.of(2014, 4, 1), 1000),
             new Transaction(LocalDate.of(2014, 4, 2), -100),
             new Transaction(LocalDate.of(2014, 4, 10), 500)
@@ -66,8 +67,9 @@ public class AccountServiceShould {
     @Test
     public void print_statement() {
         given(transactionRepository.all()).willReturn(TRANSACTIONS);
+        TransactionListPrinter printer = new TransactionListPrinter(console);
 
-        accountService.printStatement();
+        printer.printStatement(accountService.getAllTransactions());
 
         InOrder inOrder = inOrder(console);
         inOrder.verify(console).printLine("DATE | AMOUNT | BALANCE");
